Do pieces styles and create json

--- a/src/stylesheets/leftPuzzle.scss
+++ b/src/stylesheets/leftPuzzle.scss
@@ -6,4 +6,35 @@
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 10px;
   row-gap: 15px;
+  &__1 {
+    background-image: url(../images/9.jpg);
+  }
+  &__2 {
+    background-image: url(../images/8.jpg);
+  }
+  &__3 {
+    background-image: url(../images/7.jpg);
+  }
+  &__4 {
+    background-image: url(../images/6.jpg);
+  }
+  &__5 {
+    background-image: url(../images/5.jpg);
+  }
+  &__6 {
+    background-image: url(../images/4.jpg);
+  }
+  &__7 {
+    background-image: url(../images/3.jpg);
+  }
+  &__8 {
+    background-image: url(../images/2.jpg);
+  }
+  &__9 {
+    background-image: url(../images/1.jpg);
+  }
+}
+
+.size {
+  background-size: cover;
 }
