--- a/src/stylesheets/board.scss
+++ b/src/stylesheets/board.scss
@@ -1,5 +1,8 @@
-.left-puzzle {
+.board {
   border: 1px solid black;
+  border-right: 0;
+  border-bottom: 0;
+
   height: 30rem;
   width: 30rem;
   display: grid;
@@ -9,7 +12,9 @@
   margin: 0;
   padding: 0;
   margin-right: 50px;
-  &__piece {
-    list-style: none;
-  }
+}
+
+.pretty {
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
