--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -8,10 +8,8 @@
 .fa-puzzle-piece {
   color: rgb(112, 112, 212);
   height: 60px;
-  position: absolute;
-  top: 5rem;
-  right: 15rem;
-  transform: rotate(20deg);
+  position: fixed;
+  right: 12rem;
 }
 
 .App {
