--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,21 +1,28 @@
 .title {
   text-align: center;
-  font-size: 6rem;
-  margin: 0;
-  font-family: 'Lobster', cursive;
+  font-size: 3rem;
+  font-family: "Lobster", cursive;
   color: rgb(204, 109, 190);
+  @media all and (min-width: 1080px) {
+    font-size: 6rem;
+  }
 }
 .fa-puzzle-piece {
   color: rgb(112, 112, 212);
   height: 60px;
-  position: fixed;
   margin-left: 20px;
 }
 
 .App {
   display: flex;
-  justify-content: center;
-  height: 40rem;
-  width: 67rem;
-  align-items: center;
+  flex-direction: column;
+  @media all and (min-width: 1080px) {
+    background-size: cover;
+    flex-direction: row;
+    height: 40rem;
+    width: 67rem;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0 px;
+  }
 }
