--- a/src/stylesheets/board.scss
+++ b/src/stylesheets/board.scss
@@ -2,15 +2,19 @@
   border: 1px solid black;
   border-right: 0;
   border-bottom: 0;
-  height: 30rem;
-  width: 30rem;
+  height: 20rem;
+  width: 20rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-column-gap: 10px;
   grid-row-gap: 6px;
   margin: 0;
   padding: 0;
-  margin-right: 50px;
+  margin-bottom: 40px;
+  @media all and (min-width: 1080px) {
+    height: 30rem;
+    width: 30rem;
+    grid-column-gap: 10px;
+  }
 }
 
 .pretty {
