--- a/src/stylesheets/board.scss
+++ b/src/stylesheets/board.scss
@@ -6,14 +6,18 @@
   width: 20rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-row-gap: 6px;
   margin: 0;
   padding: 0;
   margin-bottom: 40px;
-  @media all and (min-width: 1080px) {
+  @media all and (min-width: 768px) {
+    height: 25rem;
+    width: 25rem;
+  }
+  @media all and (min-width: 1024px) {
     height: 30rem;
     width: 30rem;
-    grid-column-gap: 10px;
+    margin-right: 30px;
+    margin-bottom: 60px;
   }
 }
 
