--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -4,7 +4,8 @@
   font-family: "Lobster", cursive;
   color: rgb(204, 109, 190);
   @media all and (min-width: 768px) {
-    font-size: 6rem;
+    font-size: 4rem;
+    margin: 10px;
   }
   @media all and (min-width: 1024px) {
     font-size: 6rem;
@@ -20,14 +21,29 @@
 .App {
   display: flex;
   flex-direction: column;
+  align-items: center;
   @media all and (min-width: 768px) {
-    align-items: center;
+    margin-top: 20px;
   }
   @media all and (min-width: 1024px) {
     background-size: cover;
     flex-direction: row;
-    height: 40rem;
+    height: 35rem;
     width: 65rem;
     justify-content: center;
   }
+}
+.hidden {
+  display: none;
+}
+
+.win {
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.fa-trophy {
+  color: yellow;
+  margin-left: 20px;
+  font-size: 20px;
 }
