Fixed title styles

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -3,6 +3,7 @@
   font-size: 3rem;
   font-family: "Lobster", cursive;
   color: rgb(204, 109, 190);
+  margin-bottom: 10px;
   @media all and (min-width: 768px) {
     font-size: 4rem;
     margin: 10px;
